--- a/Home/home-sent-invitation.html
+++ b/Home/home-sent-invitation.html
@@ -61,57 +61,65 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-12 py-2">
-                                    <div class="card home_card br_25px-s card_bg_img-s">
+                                    <div class="card home_card br_25px-s">
                                         <div class="heart_icon">
-                                            <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
+                                            <i class="fa fa-heart fs_32px_heart-s" aria-hidden="true"></i>
                                         </div>
-                                        <div class="container">
-                                            <div class="row">
-                                                <div class="col-lg-3 col-md-3 col-3">
-                                                    <img src="../assets/images/Group 24.png" alt="" />
+                                        <div class="container mt_30px-s">
+                                            <div class="row mx-auto">
+                                                <div class="col-lg-3 col-md-3 col-3 pl-0">
+                                                    <img src="assets/images/Group 24.png" alt="" />
                                                 </div>
-                                                <div class="col-lg-9 col-md-9 col-9">
+                                                <div class="col-lg-9 col-md-9 col-9 pl-0">
                                                     <div class="text-white">
                                                         <h6 class="mb-0">Thamer</h6>
-                                                        <span class=" opacity_4-s">@thamermd</span>
-                                                        <p class="fg_yellow-s">
-                                                            <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                            <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                            <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                            <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                            <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                        <span class=" opacity_4-s fs_12px-s">@thamermd</span>
+                                                        <p class="fg_yellow-s mb-1">
+                                                            <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                            <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                            <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                            <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                            <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i> 5.0
                                                             <span class="rating_textt"> $10 </span>
                                                         </p>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="row pt-4">
-                                                <div class="col-3 text-white px-1 ft_size_14px-s">
-                                                    <span class="opacity_4-s">Age (years)</span>
-                                                    <span class="ft_17px-s">28</span>
+                                            <div class="row mx-auto pt-3">
+                                                <div class="col-3 text-white text-center px-0 fs_12px-s">
+                                                    <span class="opacity_4-s">Age(years)</span>
+                                                    <br>
+                                                    <span class="fs_12px-s">28</span>
                                                 </div>
-                                                <div class="col-3 text-white px-2 ft_size_14px-s">
+                                                <div class="col-3 text-white text-center px-0 fs_12px-s">
                                                     <span class="opacity_4-s">Matches</span>
-                                                    <span class="ft_17px-s">15</span>
+                                                    <br>
+                                                    <span class="fs_12px-s">15</span>
                                                 </div>
-                                                <div class="col-3 text-white px-3 ft_size_14px-s">
+                                                <div class="col-3 text-white text-center px-0 fs_12px-s">
                                                     <span class="opacity_4-s">Missed</span>
-                                                    <span class="ft_17px-s">2</span>
+                                                    <br>
+                                                    <span class="fs_12px-s">2</span>
                                                 </div>
-                                                <div class="col-3 text-white px-2 ft_size_14px-s">
+                                                <div class="col-3 text-white text-center px-0 fs_12px-s">
                                                     <span class="opacity_4-s">Missed</span>
-                                                    <span class="ft_size_14px-s">Defender</span>
+                                                    <br>
+                                                    <span class="fs_12px-s">Defender</span>
                                                 </div>
                                             </div>
-                                            <hr class="goalkeeper_margin_b" />
+                                            <hr class="goalkeeper_margin_b mx-1" />
 
-                                            <div class="aditya_location">
-                                                <p>
-                                                    <a class="td_none-s text-white" href="Home/home-sent-invitation.html">
+                                            <div class="row mx-auto aditya_location">
+                                                <div class="col-6">
+                                                    <p class="fs_12px-s mb-0">
                                                         <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
+                                                    </p>
+                                                </div>
+                                                <div class="col-6 pl-0">
+                                                    <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
                                                         <span class="pull-right text-white"> send invitation >> </span>
                                                     </a>
-                                                </p>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
