--- a/chat.html
+++ b/chat.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' />
 
     <link rel="stylesheet" href="assets/css/main.css" />
 
@@ -32,12 +33,12 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around" id="nav_bar-d">
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link nav_link_active-d active" href="index.html">
+                                    <a class="nav-link nav_link_active-d" href="index.html">
                                         <img src="assets/images/home_icon.svg" class="img-fluid" alt="navbar_home" /> Home
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link nav_link_active-d" href="javascript:void(0)">
+                                    <a class="nav-link nav_link_active-d" href="#">
                                         <img src="assets/images/chat_icon.svg" class="img-fluid" alt="navbar_chat" /> Chat
                                     </a>
                                 </li>
@@ -510,6 +511,27 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
                                             </p>
                                         </div>
+                                        <div class="col-6 align-self-end text-right">
+                                            <div class="dropdown">
+                                                <a type="" class="text-dark" role="button" data-toggle="dropdown">
+                                                    <i class="fa fa-ellipsis-v"></i>
+                                                </a>
+                                                <div class="dropdown-menu">
+                                                    <div>
+                                                        <a class="ml-4" href="#">
+                                                            <img class="mr-4 w_chat_read_icon-s" src="assets/images/delete_icon.svg" alt="">
+                                                            <span>Delete</span>
+                                                        </a>
+                                                    </div>
+                                                    <div>
+                                                        <a class="ml-4" href="#">
+                                                            <img class="mr-4 w_chat_read_icon-s" src="assets/images/chat_reply_icon.svg" alt="">
+                                                            <span>Reply</span>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
                                             <span class="ft_11px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 PM</span>
                                         </div>
@@ -546,6 +568,28 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
                                             </p>
                                         </div>
+                                        <div class="col-6 align-self-end text-right">
+                                            <div class="dropdown">
+                                                <a type="" class="text-dark" role="button" data-toggle="dropdown">
+                                                    <i class="fa fa-ellipsis-v"></i>
+                                                </a>
+                                                <div class="dropdown-menu">
+                                                    <div>
+                                                        <a class="ml-4" href="#">
+                                                            <img class="mr-4 w_chat_read_icon-s" src="assets/images/delete_icon.svg" alt="">
+                                                            <span>Delete</span>
+                                                        </a>
+                                                    </div>
+                                                    <div>
+                                                        <a class="ml-4" href="#">
+                                                            <img class="mr-4 w_chat_read_icon-s" src="assets/images/chat_reply_icon.svg" alt="">
+                                                            <span>Reply</span>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
                                         <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
                                             <span class="ft_11px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 PM</span>
                                         </div>
