--- a/favorite_player.html
+++ b/favorite_player.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' />
 
     <link rel="stylesheet" href="assets/css/main.css" />
 
@@ -32,7 +33,7 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around" id="nav_bar-d">
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link nav_link_active-d active" href="index.html">
+                                    <a class="nav-link nav_link_active-d " href="index.html">
                                         <img src="assets/images/home_icon.svg" class="img-fluid" alt="navbar_home" /> Home
                                     </a>
                                 </li>
@@ -43,7 +44,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link nav_link_active-d" href="javascript:void(0)">
+                                    <a class="nav-link nav_link_active-d" href="#">
                                         <img src="assets/images/favrticon.svg" class="img-fluid" alt="navbar_fvrt" /> Favorites
                                     </a>
                                 </li>
@@ -155,59 +156,63 @@
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
                             <div class="card home_card br_25px-s">
                                 <div class="heart_icon">
-                                    <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
+                                    <i class="fa fa-heart fs_32px_heart-s" aria-hidden="true"></i>
                                 </div>
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-lg-3 col-md-3 col-3">
+                                <div class="container mt_30px-s">
+                                    <div class="row mx-auto">
+                                        <div class="col-lg-3 col-md-3 col-3 pl-0">
                                             <img src="assets/images/Group 24.png" alt="" />
                                         </div>
-                                        <div class="col-lg-9 col-md-9 col-9">
+                                        <div class="col-lg-9 col-md-9 col-9 pl-0">
                                             <div class="text-white">
                                                 <h6 class="mb-0">Thamer</h6>
-                                                <span class=" opacity_4-s">@thamermd</span>
-                                                <p class="fg_yellow-s">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                <span class=" opacity_4-s fs_12px-s">@thamermd</span>
+                                                <p class="fg_yellow-s mb-1">
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i> 5.0
                                                     <span class="rating_textt"> $10 </span>
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row pt-4">
-                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                    <div class="row mx-auto pt-3">
+                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                             <span class="opacity_4-s">Age(years)</span>
                                             <br>
                                             <span class="fs_12px-s">28</span>
                                         </div>
-                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                             <span class="opacity_4-s">Matches</span>
                                             <br>
                                             <span class="fs_12px-s">15</span>
                                         </div>
-                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                             <span class="opacity_4-s">Missed</span>
                                             <br>
                                             <span class="fs_12px-s">2</span>
                                         </div>
-                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                             <span class="opacity_4-s">Missed</span>
                                             <br>
                                             <span class="fs_12px-s">Defender</span>
                                         </div>
                                     </div>
-                                    <hr class="goalkeeper_margin_b" />
+                                    <hr class="goalkeeper_margin_b mx-1" />
 
-                                    <div class="aditya_location">
-                                        <p>
-                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                    <div class="row mx-auto aditya_location">
+                                        <div class="col-6">
+                                            <p class="fs_12px-s mb-0">
                                                 <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                                <span class="pull-right text-white mt-2"> send invitation >> </span>
+                                            </p>
+                                        </div>
+                                        <div class="col-6 pl-0">
+                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                                <span class="pull-right text-white"> send invitation >> </span>
                                             </a>
-                                        </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -216,59 +221,63 @@
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
                             <div class="card home_card br_25px-s">
                                 <div class="heart_icon">
-                                    <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
+                                    <i class="fa fa-heart fs_32px_heart-s" aria-hidden="true"></i>
                                 </div>
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-lg-3 col-md-3 col-3">
+                                <div class="container mt_30px-s">
+                                    <div class="row mx-auto">
+                                        <div class="col-lg-3 col-md-3 col-3 pl-0">
                                             <img src="assets/images/Group 24.png" alt="" />
                                         </div>
-                                        <div class="col-lg-9 col-md-9 col-9">
+                                        <div class="col-lg-9 col-md-9 col-9 pl-0">
                                             <div class="text-white">
                                                 <h6 class="mb-0">Thamer</h6>
-                                                <span class=" opacity_4-s">@thamermd</span>
-                                                <p class="fg_yellow-s">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                <span class=" opacity_4-s fs_12px-s">@thamermd</span>
+                                                <p class="fg_yellow-s mb-1">
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i> 5.0
                                                     <span class="rating_textt"> $10 </span>
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row pt-4">
-                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                    <div class="row mx-auto pt-3">
+                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                             <span class="opacity_4-s">Age(years)</span>
                                             <br>
                                             <span class="fs_12px-s">28</span>
                                         </div>
-                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                             <span class="opacity_4-s">Matches</span>
                                             <br>
                                             <span class="fs_12px-s">15</span>
                                         </div>
-                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                             <span class="opacity_4-s">Missed</span>
                                             <br>
                                             <span class="fs_12px-s">2</span>
                                         </div>
-                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                             <span class="opacity_4-s">Missed</span>
                                             <br>
                                             <span class="fs_12px-s">Defender</span>
                                         </div>
                                     </div>
-                                    <hr class="goalkeeper_margin_b" />
+                                    <hr class="goalkeeper_margin_b mx-1" />
 
-                                    <div class="aditya_location">
-                                        <p>
-                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                    <div class="row mx-auto aditya_location">
+                                        <div class="col-6">
+                                            <p class="fs_12px-s mb-0">
                                                 <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                                <span class="pull-right text-white mt-2"> send invitation >> </span>
+                                            </p>
+                                        </div>
+                                        <div class="col-6 pl-0">
+                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                                <span class="pull-right text-white"> send invitation >> </span>
                                             </a>
-                                        </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -280,9 +289,9 @@
         <!-- container for favorite players - end -->
     </div>
     <!-- .................Home Page End ......................... -->
-    <script src="assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
