--- a/more.html
+++ b/more.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' />
 
     <link rel="stylesheet" href="assets/css/main.css" />
 
@@ -54,7 +55,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link nav_link_active-d" href="javascript:void(0)">
+                                    <a class="nav-link nav_link_active-d" href="#">
                                         <img src="assets/images/moreoption.svg" class="img-fluid" alt="navbar_home" /> More
                                     </a>
                                 </li>
